--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,6 @@
 </head>
 <body>
   <h1>Portfolio</h1>
-  <p>I will try my best to get more work in my portfolio.</p>
+  <link rel="stylesheet" href="https://daniellehillman.github.io/Sensify/">
 </body>
 </html>
