--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,6 @@
 </head>
 <body>
   <h1>Portfolio</h1>
-  <link rel="stylesheet" href="https://daniellehillman.github.io/Sensify/">
+  <div><link rel="stylesheet" href="https://daniellehillman.github.io/Sensify/">Sensify Project</div>
 </body>
 </html>
