--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,6 @@
 </head>
 <body>
   <h1>Portfolio</h1>
-  <div><link rel="stylesheet" href="https://daniellehillman.github.io/Sensify/">Sensify Project</div>
+  <a href="https://danielle94869.github.io/responsive-portfolio/">Project Sensify |</a>
 </body>
 </html>
