--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p>
       My name is Daniel Le. I love programming and I will try my best to get the experience in the field.
     </p>
-    <img src="https://i.ytimg.com/vi/6cOsxaNC06c/maxresdefault.jpg" alt="VS Code">
+    <img id="image" src="./Daniel-Le.JPG" alt="Daniel Le">
   </div>
 </body>
 
