--- a/portfolio.html
+++ b/portfolio.html
@@ -11,5 +11,6 @@
 <body>
   <h1>Portfolio</h1>
   <a href="https://daniellehillman.github.io/Sensify/">Project Sensify</a>
+  <a href="https://dashboard.heroku.com/apps/cryptic-savannah-70126">Project 2</a>
 </body>
 </html>
