--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>Portfolio</h1>
-  <a href="https://daniellehillman.github.io/Sensify/">Project Sensify</a>
-  <a href="https://dashboard.heroku.com/apps/cryptic-savannah-70126">Project 2</a>
+  <p><a href="https://daniellehillman.github.io/Sensify/">Project Sensify</a></p>
+  <p><a href="https://dashboard.heroku.com/apps/cryptic-savannah-70126">Project 2</a></p>
 </body>
 </html>
