--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+    body {
+      background-color: teal;
+    }
+  
+    .btn {
+      background-color: #a49adb;
+    }
+  
+    .nav-wrapper {
+      background-color: #7cdda4;
+    }
+  
+    #firstbox {
+      background-color: #f6fcff;
+      box-shadow: 5px 5px 2px #888888;
+      margin: 15px
+    }
+  
+    button {
+      margin: 10px
+    }
+  
+    img {
+      max-width: 25%;
+      height: auto
+    }
+  
+    body {
+      background-color: teal
+    }
+  </style>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -9,8 +44,19 @@
   <title>Daniel Le</title>
 </head>
 <body>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="index.html" class="brand-logo">Daniel Le</a>
+      <ul class="right hide-on-med-and-down">
+        <a class="main" href="./index.html">Main |</a>
+        <a class="about" href="./README.md">About |</a>
+        <a class="portfolio" href="./portfolio.html">Portfolio |</a>
+        <a class="contact" href="./contact.html">Contact |</a>
+      </ul>
+    </div>
+  </nav>
   <h1>Portfolio</h1>
   <p><a href="https://daniellehillman.github.io/Sensify/">Project Sensify</a></p>
-  <p><a href="https://dashboard.heroku.com/apps/cryptic-savannah-70126">Project 2</a></p>
+  <p><a href="https://dashboard.heroku.com/apps/cryptic-savannah-70126">Project TrActivity</a></p>
 </body>
 </html>
