--- a/index.html
+++ b/index.html
@@ -2,6 +2,38 @@
 <html lang="en-us">
 
 <head>
+  <style>
+    body {
+      background-color: teal;
+    }
+  
+    .btn {
+      background-color: #a49adb;
+    }
+  
+    .nav-wrapper {
+      background-color: #7cdda4;
+    }
+  
+    #firstbox {
+      background-color: #f6fcff;
+      box-shadow: 5px 5px 2px #888888;
+      margin: 15px
+    }
+  
+    button {
+      margin: 10px
+    }
+  
+    img {
+      max-width: 25%;
+      height: auto
+    }
+  
+    body {
+      background-color: teal
+    }
+  </style>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -11,20 +43,33 @@
 </head>
 
 <body>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="index.html" class="brand-logo">Daniel Le</a>
+      <ul class="right hide-on-med-and-down">
+        <a class="main" href="./index.html">Main |</a>
+        <a class="about" href="./README.md">About |</a>
+        <a class="portfolio" href="./portfolio.html">Portfolio |</a>
+        <a class="contact" href="./contact.html">Contact |</a>
+      </ul>
+    </div>
+  </nav>
+  <div class="jumbotron">
+    <div>
+      <img id="image" src="./Daniel-Le.JPG" alt="Daniel Le">
+    </div>
+    <h1 class="display-4">Daniel Le</h1>
+    <p>Fountain Valley, CA 92708</p>
+    <p>Email: lequangduc512014@gmail.com</p>
+    <p class="lead">My name is Daniel Le. I am graduated from Coding Boot Camp University of California, Irvine. I love programming and I will try my best to get the experience in the field.</p>
+    <hr class="my-4">
+    <a class="btn btn-primary btn-lg" href="./portfolio.html" role="button">View My Projects</a>
+  </div>
   <div class="container">
-    <h1 id="name"> Daniel Le </h1> 
-    <nav id="navBar">
-      <a class="about" href="./README.md">About |</a>
-      <a class="portflio" href="portfolio.html">Portfolio |</a>
-      <a class="contact" href="contact.html">Contact |</a>
-    </nav>
+    <h1 id="name">  </h1> 
+    
   </div>
-  <div>
-    <p>
-      My name is Daniel Le. I love programming and I will try my best to get the experience in the field.
-    </p>
-    <img id="image" src="./Daniel-Le.JPG" alt="Daniel Le">
-  </div>
+  
 </body>
 
 </html>
